# AutomaBot

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  release_version.py  requirements.txt  setup.cfg  setup.py  test.sh  tox.ini
AutomaBot/: __init__.py  __main__.py  art.txt  bot.py  default_config.toml
automabot/: __main__.py  automation.py  bot.py  tools.py  web.py
automabot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: Makefile  conf.py  index.rst
source/: __main__.py  art.txt  automation.py  bot.py  tools.py
