[bdist_wheel]
universal=0

[metadata]
name = automabot

author = 73VW

author_email = mael.pedretti@he-arc.ch

summary = Automabot bot for Discord.

license = MIT

description-file =
    README.rst

home-page = https://github.com/73VW/AutomaBot

python_requires = >=3.6

classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Education
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Home Automation

[extras]
fast =
    cchardet
    aiodns

qa =
    flake8
    isort
    pycodestyle
    pydocstyle

docs =
    Sphinx>=1.6.0
    sphinxcontrib-trio

[options]
packages = find:

[entry_points]
console_scripts =
    automabot = automabot.__main__:main
